test/Error/Purity/CannotPurifyTop2/Top2.ds

-- Cannot purify top level effects
list2	= (\f x -> mapL f x) (\x -> print x) ["perch", "tetra", "cichlid"]
